cleanup-dpol/cleanup-empty-replicasets/cleanup-empty-replicasets.yaml
apiVersion: policies.kyverno.io/v1
kind: DeletingPolicy
metadata:
  name: cleanup-empty-replicasets
  annotations:
    policies.kyverno.io/title: Cleanup Empty ReplicaSets
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: ReplicaSet
    kyverno.io/kyverno-version: 1.15.0
    policies.kyverno.io/minversion: 1.17.0
    kyverno.io/kubernetes-version: "1.27+"
    policies.kyverno.io/description: >-
      ReplicaSets serve as an intermediate controller for various Pod controllers like Deployments. When a new version of a Deployment is initiated, it generates a new ReplicaSet with the specified number of replicas and scales down the current one to zero. Consequently, numerous empty ReplicaSets may accumulate in the cluster, leading to clutter and potential false positives in policy reports if enabled. This cleanup policy is designed to remove empty ReplicaSets across the cluster. Note: This  [...]
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["replicasets"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
  conditions:
    - name: is-empty
      expression: "object.spec.replicas == 0"
  schedule: "* * * * *"
